[project]
name = "lstm-ddpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "timm>=1.0.22",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
